--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -19,10 +19,10 @@ $--colors: (
   ),
 );
 
-// we can add this to custom namespace, default is 'el'
-@forward "element-plus/theme-chalk/src/mixins/config.scss" with (
-  $namespace: "ep"
-);
+// // we can add this to custom namespace, default is 'el'
+// @forward "element-plus/theme-chalk/src/mixins/config.scss" with (
+//   $namespace: "ep"
+// );
 
 // You should use them in scss, because we calculate it by sass.
 // comment next lines to use default color
