--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,12 +14,17 @@ body {
 }
 
 a {
-  color: var(--ep-color-primary);
+  color: var(--el-color-primary);
 }
 
 code {
   border-radius: 2px;
   padding: 2px 4px;
-  background-color: var(--ep-color-primary-light-9);
-  color: var(--ep-color-primary);
+  background-color: var(--el-color-primary-light-9);
+  color: var(--el-color-primary);
+}
+
+#app{
+  width: 100%;
+  height: 100%;
 }
